--- a/src/styles.less
+++ b/src/styles.less
@@ -2,3 +2,19 @@
 @import "assets/css/reset.css";
 @import "assets/css/flexboxgrid.min.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+.flex-fill-height {
+  display: flex !important;
+  flex: 1 0 auto !important;
+  flex-direction: column !important;
+}
