--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,7 @@
 <mat-card>
   <div class="row around-xs">
     <div class="col-xs-6">
-      <h2>Job Application for Heroes</h2>
-      <app-dynamic-form [questions]="questions"></app-dynamic-form>
+      <app-dynamic-form [dynamicFormData]="dynamicFormData"></app-dynamic-form>
     </div>
   </div>
 </mat-card>
