--- a/src/app/dynamic-form/dynamic-form.component.less
+++ b/src/app/dynamic-form/dynamic-form.component.less
@@ -12,6 +12,14 @@
     margin-left: 10px;
   }
 
+  h1 {
+    font-size: 2em;
+  }
+
+  form {
+    margin-top: 1em;
+  }
+
   .cancel {
     &__button {
       margin-left: 10px;
