--- a/src/styles.less
+++ b/src/styles.less
@@ -14,7 +14,18 @@ body {
 }
 
 .flex-fill-height {
-  display: flex !important;
-  flex: 1 0 auto !important;
-  flex-direction: column !important;
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+}
+
+table {
+  .mat-cell,
+  .mat-header-cell {
+    vertical-align: middle;
+  }
+}
+
+body {
+  background: #fafafa;
 }
